Version: 0.0.9
Date: 2023-03-27
  Fixes:
    - When silver is disabled, do not enable an alternate electronic circuit recipe
    - Alternate electronic circuit recipe now unlocks at appropriate time in certain mod loadouts
    - Some fixes around platinum, palladium settings
  Changes:
    - Tweak silver wire icon
    - Tweak electronic circuit recipe icons
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 2023-03-27
  Fixes:
    - Researching Advanced Electronics 2 unlocks now correctly unlocks CPUs in most mod loadouts.
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2023-03-26
  Fixes:
    - Compatibility fixes for some loadouts
    - Fix silicon in CPUs in some loadouts
  Features:
    - SE: Added setting to output a very small amount of ore in Nauvis core mining, default zero.
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2023-03-22
  Features:
    - Basic compatility with 248k, unified gold ingot items and production lines.
  Fixes:
    - SE: Satellite rocket silo no longer requires palladium, due to tech deadlock
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2023-03-19
  Features:
    - Compatible with ModMash Splinter Gold
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2023-03-18
  Fixes:
    - More locale strings (en)
    - K2, SE: Prod modules for alternate smelting chains
  Changes:
    - Recipe balance changes
    - K2: Early rare metals recipe does not output noble metals
    - SE: Post-rocket techs require rocket science packs
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2023-03-14
  Changes: