@@ -3,6 +3,23 @@ local util = require("data-util");
 
 
 if util.me.silver() then
+  if mods.bobelectronics then
+    -- alternate electronic circuit recipe that uses silver
+    local ec = futil.table.deepcopy(data.raw.recipe["basic-electronic-components"])
+    ec.name = "basic-electronic-components-silver"
+    data:extend({ec})
+    util.set_enabled("basic-electronic-components-silver", false)
+    util.replace_ingredient("basic-electronic-components-silver", "copper-cable", "silver-wire")
+    util.add_icon("basic-electronic-components-silver", {
+        icon = "__bzgold__/graphics/icons/silver-wire.png",
+        icon_size = 64, icon_mipmaps = 4, scale = 0.3, shift = {-8,-8}
+    })
+    util.add_icon("basic-electronic-components", {
+        icon = "__base__/graphics/icons/copper-cable.png",
+        icon_size = 64, icon_mipmaps = 4, scale = 0.3, shift = {-8,-8}
+    })
+    util.add_unlock("electronics", "basic-electronic-components-silver")
+  else
     -- alternate electronic circuit recipe that uses silver
     util.set_main_product("electronic-circuit", "electronic-circuit")
     local ec = futil.table.deepcopy(data.raw.recipe["electronic-circuit"])
